--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "Anton Ivanov",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "babel-loader": "^8.2.2",
     "browser-sync": "^2.26.14",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
@@ -21,6 +24,8 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-ttf2woff": "^1.1.1",
     "gulp-ttf2woff2": "^4.0.1",
-    "node-sass": "^5.0.0"
+    "gulp-uglify-es": "^2.0.0",
+    "node-sass": "^5.0.0",
+    "webpack-stream": "^6.1.2"
   }
 }
